# cpp.cov

./: .clangd  .editorconfig  .gitignore  CMakeLists.txt  README.md  bu  dockerfile  fix.sh
cmake/: Builder.cmake  Defines.cmake  Funcs.cmake  Macros.cmake  Packages.cmake
libs/: CMakeLists.txt  README.md
libs/3rd/: CMakeLists.txt
libs/3rd/aacg/: .gitignore  CMakeLists.txt
libs/3rd/aacg/3rd/: .gitignore  CMakeLists.txt
libs/3rd/aacg/aacgain/: CMakeLists.txt  MP4MetaFile.cpp  aacgain.cpp  syntax.c
libs/3rd/aacg/mp3gain/: CMakeLists.txt  apetag.c  gain_analysis.c  id3tag.c  id3tag.h  mp3g.cpp  mp3g.h  mp3gain.c  mp3gain.h  replaygaindll.c  rg_error.c  rg_error.h
libs/3rd/aacg/mp3gain/mpglibDBL/: interface.c
libs/src/: doctest.h
libs/src/cmds/: cli.h  clihelp.h  idx.h
libs/src/cmds/cov/: core.cpp  cov.cpp  cov.h  defs.h  idx.h  mov.cpp  mov.h
libs/src/rz/: coll.hpp  define.h  idx.h  json.h  json.hpp  rnd.h  thread.h  types.h  util.h
libs/src/rz/@lib/: json.hpp  progress.hpp  unicode.hpp
libs/src/rz/@lib/memstr/: hash.cpp  hash.h  idx.h  index.cpp  page.cpp  page.h  page_archive.cpp  page_archive.h  page_catalog.cpp  page_catalog.h  page_nursery.cpp  page_nursery.h  page_ptr.cpp  page_ptr.h  page_sizes.cpp  page_sizes.h  pages.cpp  pages.h  reference.cpp  reference.h
libs/src/rz/base/: cmp.h  idx.h  number.h  str.h  str.regex.h  str.unicode.h
libs/src/rz/code/: class.h  concept.h  idx.h  progress.h
libs/src/rz/dt/: idatetime.hpp  idx.h  index.cpp
libs/src/rz/dt/date/: date.hpp  tz.hpp
libs/src/rz/io/: cli.hpp  dir.h  fil.cpp  fil.h  idx.h  type.cpp  type.h  utils.h
libs/src/rz/io/arc/: idx.h  index.cpp
libs/src/rz/io/mod/: idir.cpp  idir.h
libs/src/rz/mda/: defs.hpp  idx.hpp  info.hpp
libs/src/rz/mda/_common/: bitrate.hpp
libs/src/rz/mda/common/: conv.h  idx.h
libs/src/rz/mda/img/: idx.h
libs/src/rz/mda/vdo/: idx.h
libs/src/rz/mda/vo/: conv.h  gain.hpp  idx.hpp
libs/src/rz/str/: idx.h  locale.cpp  locale.h
libs/src/rz/sys/: cmdr.h  idx.h
libs/src/spdlog/: async.h  async_logger-inl.h  async_logger.h  common-inl.h  common.h  formatter.h  fwd.h  idx.h  logger-inl.h  logger.h  pattern_formatter-inl.h  pattern_formatter.h  spdlog-inl.h  stopwatch.h  tweakme.h  version.h
libs/src/spdlog/cfg/: argv.h  env.h  helpers-inl.h  helpers.h
libs/src/spdlog/details/: backtracer-inl.h  backtracer.h  circular_q.h  console_globals.h  file_helper-inl.h  file_helper.h  fmt_helper.h  log_msg-inl.h  log_msg.h  log_msg_buffer-inl.h  log_msg_buffer.h  mpmc_blocking_q.h  null_mutex.h  os-inl.h  os.h  periodic_worker-inl.h  periodic_worker.h  registry-inl.h  registry.h  synchronous_factory.h  tcp_client-windows.h  tcp_client.h  thread_pool-inl.h  thread_pool.h
libs/src/spdlog/fmt/: bin_to_hex.h  fmt.h
libs/src/spdlog/fmt/bundled/: format.h  printf.h
libs/src/spdlog/sinks/: android_sink.h  ansicolor_sink-inl.h  ansicolor_sink.h  base_sink-inl.h  base_sink.h  basic_file_sink-inl.h  basic_file_sink.h  daily_file_sink.h  dist_sink.h  dup_filter_sink.h  hourly_file_sink.h  msvc_sink.h  null_sink.h  ostream_sink.h  ringbuffer_sink.h  rotating_file_sink-inl.h  rotating_file_sink.h  sink-inl.h  sink.h  stdout_color_sinks-inl.h  stdout_color_sinks.h  stdout_sinks-inl.h  stdout_sinks.h  syslog_sink.h  systemd_sink.h  tcp_sink.h  win_eventlog_sink.h  wincolor_sink-inl.h  wincolor_sink.h
rss/: icon.icns
src/: CMakeLists.txt
src/args/: index.cpp
src/cov/: index.cpp
src/prog/: main.cpp
src/txt/: index.cpp
src/ui/: app.cpp  custom.h
test/: CMakeLists.txt  idx.cpp
test/base/: _utils.hpp  cmd.cpp  enum.cpp  json.cpp  micro.cpp  micro.h  thread.cpp
test/base/@rz/: fmt.cpp  time.cpp
test/base/io/: idir.cpp  merge.cpp
test/base/math/: test_math.cpp
test/base/std/: regex.cpp  str.cpp  test_std.cpp
test/base/syntax/: customArgRets.cpp  multipleArgs.cpp
test/base/syntax/coroutine/: n.cpp  stand.cpp
test/exec/: cli.cpp  conv.cpp  db.cpp  net.cpp
test/lib/: opencv.cpp  progress.cpp  utils.hpp
test/lib/archive/: archive.cpp
test/lib/media/: base.cpp  mp3.gain.cpp
test/mod/: db.h
test/run/: base.cpp  cmdr.cpp
